--- a/login.html
+++ b/login.html
@@ -3,8 +3,91 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThinkTrek+ - Login</title>
+    <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <style>
+        /* Added Styles for Beautification */
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f9;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        .login-container {
+            background-color: #fff;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+            width: 100%;
+            max-width: 400px;
+        }
+
+        h2 {
+            text-align: center;
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        label {
+            display: block;
+            margin: 10px 0 5px;
+            font-size: 14px;
+            color: #555;
+        }
+
+        input, select, button {
+            width: 100%;
+            padding: 12px;
+            margin: 8px 0;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+        }
+
+        input:focus, select:focus, button:focus {
+            outline: none;
+            border-color: #007BFF;
+        }
+
+        button {
+            background-color: #007BFF;
+            color: white;
+            cursor: pointer;
+            border: none;
+        }
+
+        button:hover {
+            background-color: #0056b3;
+        }
+
+        .signup-link {
+            text-align: center;
+            margin-top: 15px;
+        }
+
+        .signup-link p {
+            color: #555;
+            font-size: 14px;
+        }
+
+        .signup-link a {
+            color: #007BFF;
+            text-decoration: none;
+        }
+
+        .signup-link a:hover {
+            text-decoration: underline;
+        }
+
+        select {
+            height: 40px; /* Increased the height for better visibility */
+            font-size: 16px; /* Increased font size */
+        }
+    </style>
 </head>
 <body>
     <div class="login-container">
@@ -18,7 +101,7 @@
 
             <!-- User Type Option (Parent or Student) -->
             <label for="userType">Login As</label>
-            <select id="userType" name="userType" required>
+            <select id="userType" name="userType" required size="1">
                 <option value="student">Student</option>
                 <option value="parent">Parent (Track Student Progress)</option>
             </select>
