--- a/dashboard.html
+++ b/dashboard.html
@@ -295,7 +295,7 @@
         <!-- Stats Overview Card (Learning Streak) -->
         <div class="card">
             <h3>Learning Streak 🔥</h3>
-            <p id="streak">Loading your streak...</p>
+            <p id="streak">You've completed 10 days of learning without breaking your streak!</p>
         </div>
 
         <!-- Day-wise Streak Display -->
