--- a/dashboard.html
+++ b/dashboard.html
@@ -286,7 +286,7 @@
         <div class="welcome-message">
             <h2>
                 <span class="icon"><i class="fas fa-book-reader"></i></span>
-                Welcome to Your Dashboard,Username!
+                Welcome to Your Dashboard!
                 <span class="icon"><i class="fas fa-laptop-code"></i></span>
             </h2>
             <p>Here, you can view your progress, learning streak, and more. Keep going strong!</p>
